<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip"
        android:visibility="visible" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/androidpay_public_key" />

        <EditText
            android:id="@+id/et_androidpay_public_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/configure_edittext_selector"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:longClickable="true"
            android:maxLength="250"
            android:text=""></EditText>
    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_env"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_env"
            android:paddingRight="30dp"/>

        <!-- radio buttonto select environment -->

        <RadioGroup
            android:id="@+id/rg_environment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_env_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/env_test" />

            <RadioButton
                android:id="@+id/rb_env_prod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/env_prod"
                android:paddingRight="20dp"/>
        </RadioGroup>

    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+id/btn_Use"
            style="@style/BlueButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="5dp"
            android:text="@string/use" />
        <Button
            android:id="@+id/btn_Clear"
            style="@style/BlueButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_margin="5dp"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>