<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:padding="5dip"
        android:visibility="visible">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/android_pay_payment_token_bundle" />

        <EditText
            android:id="@+id/et_android_pay_payment_token_bundle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/configure_edittext_selector"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:longClickable="true"
            android:maxLength="1000"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:padding="5dip"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/encrypted_message" />

        <EditText
            android:id="@+id/et_encrypted_message"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/configure_edittext_selector"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:longClickable="true"
            android:maxLength="250"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/ephemeral_public_key" />

        <EditText
            android:id="@+id/et_ephemeral_public_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/configure_edittext_selector"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:longClickable="true"
            android:maxLength="250"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip"
        android:visibility="visible" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/tag" />

        <EditText
            android:id="@+id/et_tag"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="@drawable/configure_edittext_selector"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:longClickable="true"
            android:maxLength="250"></EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+id/btn_Confirm"
            style="@style/BlueButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>